WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289556
[ Sequoia wk2 Release x86_64 ] fast/events/page-visibility-transition-test.html is a flaky timeout.
https://bugs.webkit.org/show_bug.cgi?id=289556
Summary
[ Sequoia wk2 Release x86_64 ] fast/events/page-visibility-transition-test.ht...
Yasmin Karimi
Reported
2025-03-11 11:51:11 PDT
fast/events/page-visibility-transition-test.html This test is a flaky timeout on Sequoia wk2 Release on Macmini8,1 with x86_64. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fevents%2Fpage-visibility-transition-test.html
DIFF: @@ -1,23 +1,11 @@ +FAIL: Timed out waiting for notifyDone to be called + This test checks that Page Visibility state values are correct and the event changes are fired correctly. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS document.visibilityState is "visible" -PASS document.hidden is false -PASS internals.scriptedAnimationsAreSuspended is false -PASS event.bubbles is true -PASS document.visibilityState is "hidden" -PASS document.hidden is true -PASS internals.scriptedAnimationsAreSuspended is true -PASS document.visibilityState is "hidden" -PASS document.hidden is true -PASS internals.scriptedAnimationsAreSuspended is true -PASS event.bubbles is true -PASS document.visibilityState is "visible" -PASS document.hidden is false -PASS internals.scriptedAnimationsAreSuspended is false -PASS successfullyParsed is true +FAIL document.visibilityState should be visible. Was hidden. +FAIL document.hidden should be false. Was true. +FAIL internals.scriptedAnimationsAreSuspended should be false. Was true. -TEST COMPLETE - DIFF URL:
https://build.webkit.org/results/Apple-Sequoia-Release-WK2-Tests/291948@main%20(1900)/fast/events/page-visibility-transition-test-pretty-diff.html
REPRODUCIBILITY: I was unable to reproduce on MacOS Sequoia 15.3.1 (24D70 / x86_64).
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-11 11:51:19 PDT
<
rdar://problem/146779909
>
EWS
Comment 2
2025-03-11 12:01:54 PDT
Test gardening commit
291966@main
(ccfa85dddea1): <
https://commits.webkit.org/291966@main
> Reviewed commits have been landed. Closing PR #42274 and removing active labels.
Ryosuke Niwa
Comment 3
2025-04-09 22:24:16 PDT
I can reproduce this flakiness with: ./Tools/Scripts/run-webkit-tests --release --no-build --no-show-results --iterations 20 --exit-after-n-failures 1 LayoutTests/fast/events/page-visibility-*
Ryosuke Niwa
Comment 4
2025-04-09 23:10:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43887
EWS
Comment 5
2025-04-10 10:07:25 PDT
Committed
293529@main
(99686511ff70): <
https://commits.webkit.org/293529@main
> Reviewed commits have been landed. Closing PR #43887 and removing active labels.
Ryosuke Niwa
Comment 6
2025-04-16 16:21:40 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/44171
EWS
Comment 7
2025-04-16 16:31:18 PDT
Committed
293772@main
(e87e6c066dd0): <
https://commits.webkit.org/293772@main
> Reviewed commits have been landed. Closing PR #44171 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug