[ Sequoia wk2 Release x86_64 ] fast/events/page-visibility-transition-test.html is a flaky timeout. https://bugs.webkit.org/show_bug.cgi?id=289556 rdar://146779909

Reviewed by Wenson Hsieh.

The flakiness was caused by the initial page visibility state being affected by preceding test's page visibility
state changes. Fix the flakiness by explicitly waiting for the activity state change RunLoopObserver to fire
(which triggers visibility state update) while resetting the state to the consistent values.

* Tools/WebKitTestRunner/mac/TestControllerMac.mm:
(WTR::TestController::platformResetStateToConsistentValues):

Canonical link: https://commits.webkit.org/293529@main