Tools/WebKitTestRunner/mac/TestControllerMac.mm
@@ -34,6 +34,7 @@
 #import "TestRunnerWKWebView.h"
 #import "WPTFunctions.h"
 #import "WebKitTestRunnerPasteboard.h"
+#import <WebCore/RunLoopObserver.h>
 #import <WebKit/WKContextPrivate.h>
 #import <WebKit/WKProcessPoolPrivate.h>
 #import <WebKit/WKStringCF.h>
@@ -184,7 +185,15 @@ bool TestController::platformResetStateToConsistentValues(const TestOptions& opt
     while ([NSApp nextEventMatchingMask:NSEventMaskGesture | NSEventMaskScrollWheel untilDate:nil inMode:NSDefaultRunLoopMode dequeue:YES]) {
         // Clear out (and ignore) any pending gesture and scroll wheel events.
     }
-    
+
+    bool runLoopObserverFired = false;
+    auto observer = makeUnique<WebCore::RunLoopObserver>(WebCore::RunLoopObserver::WellKnownOrder::ActivityStateChange, [&] {
+        runLoopObserverFired = true;
+    }, WebCore::RunLoopObserver::Type::OneShot);
+    observer->schedule();
+    while (!runLoopObserverFired)
+        [[NSRunLoop currentRunLoop] runUntilDate:[NSDate dateWithTimeIntervalSinceNow:0.01]];
+
     return true;
 }
 
